[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/bus_model.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/bus.gd" type="Script" id=2]

[sub_resource type="PhysicsMaterial" id=1]
bounce = 0.1

[sub_resource type="SphereShape" id=2]
margin = 0.001

[sub_resource type="SphereMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 0, 0.960784, 0.894118, 0.0352941 )

[node name="Bus" type="Spatial"]
script = ExtResource( 2 )

[node name="Sphere" type="RigidBody" parent="."]
physics_material_override = SubResource( 1 )
gravity_scale = 3.0
continuous_cd = true
linear_damp = 3.0
angular_damp = 5.0

[node name="CollisionShape" type="CollisionShape" parent="Sphere"]
shape = SubResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="Sphere"]
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="HCR2 Bus" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.984, 0 )

[node name="CamRotPoint" type="Spatial" parent="HCR2 Bus"]
transform = Transform( -1, 0, 3.25841e-07, 0, 1, 0, -3.25841e-07, 0, -1, 0, 0, 0 )

[node name="SpringArm" type="SpringArm" parent="HCR2 Bus/CamRotPoint"]
transform = Transform( 1, 0, 0, 0, 0.819152, 0.573576, 0, -0.573576, 0.819152, 0, 1.56255, 0 )
spring_length = 15.0

[node name="RemoteTransform" type="RemoteTransform" parent="HCR2 Bus/CamRotPoint/SpringArm"]
remote_path = NodePath("../../../../Camera")

[node name="CamPoint" type="Spatial" parent="HCR2 Bus/CamRotPoint"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 12.263, 10.845 )

[node name="RayCast" type="RayCast" parent="HCR2 Bus"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0163305, 0 )
enabled = true

[node name="Camera" type="Camera" parent="."]
transform = Transform( -1, -1.86895e-07, 2.66913e-07, 0, 0.819152, 0.573576, -3.25841e-07, 0.573576, -0.819152, 0, 0.578546, 0 )
current = true
fov = 80.0
far = 300.0
